refactor : Replace API CRUD responses type Entity to ResponseDto